[sites] Fix layout spacing

--- a/themes/sites/css/main.css
+++ b/themes/sites/css/main.css
@@ -182,11 +182,17 @@ body:not(:target) .region-primary-menu .menu-item {
   margin-bottom: 2rem;
 }
 
-@media all and (min-width: 560px) {
-  .layout--threecol-section,
-  .layout--fourcol-section {
-    flex-wrap: nowrap;
-    gap: 1.5rem;
+@media all and (min-width: 640px) {
+  .layout .layout__region .block-link-box {
+    margin: 1rem 1rem 2rem;
+  }
+
+  .layout .layout__region:first-child .block-link-box {
+    margin-left: 0;
+  }
+
+  .layout .layout__region:last-child .block-link-box {
+    margin-right: 0;
   }
 }
 
